record-flags/main/default/objects/Record_Flag__mdt/Record_Flag__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to configure which flags are run in which order for which objects on their record pages via the Record Flags LWC</description>
    <label>Record Flag</label>
    <pluralLabel>Record Flags</pluralLabel>
</CustomObject>