record-flags/main/default/objects/Record_Flag__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>The Apex Class which contains the logic to calculate this record flag. It must extend RecordsFlags.Fetcher OR RecordsFlags.SharedData.</description>
    <inlineHelpText>The Apex Class which contains the logic to calculate this record flag. It must extend RecordsFlags.Fetcher OR RecordsFlags.SharedData.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>