record-flags/main/default/objects/Record_Flag__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <description>An optional custom permission needed to view this record flag</description>
    <inlineHelpText>An optional custom permission needed to view this record flag</inlineHelpText>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>