record-flags/main/default/objects/Record_Flag__mdt/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>The Flow which contains the logic to calculate this record flag</description>
    <inlineHelpText>The Flow which contains the logic to calculate this record flag</inlineHelpText>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>