record-flags/main/default/objects/Record_Flag__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the Record Flag is enabled</description>
    <inlineHelpText>If unchecked, the Record Flag calculation will not be run</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>