record-flags/main/default/objects/Record_Flag__mdt/fields/Is_Data_Fetcher__c.field-meta.xml
<CustomField>
    <fullName>Is_Data_Fetcher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Apex class implements RecordsFlags.SharedData and is used for returning data shared by other Fetcher classes. There should only be one Shared Data Fetcher per Object.</description>
    <inlineHelpText>Indicates that the Apex class implements RecordsFlags.SharedData and is used for returning data shared by other Fetcher classes. There should only be one Shared Data Fetcher per Object.</inlineHelpText>
    <label>Is Shared Data Fetcher?</label>
    <type>Checkbox</type>
</CustomField>