record-flags/main/default/objects/Record_Flag__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The Object that this record flag will render for</description>
    <inlineHelpText>The Object that this record flag will render for</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>