record-flags/main/default/objects/Record_Flag__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which this flag is run in comparison to other Record Flags. Flags are sorted in ascending order.</description>
    <inlineHelpText>The order in which this flag is run in comparison to other Record Flags. Flags are sorted in ascending order.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>