record-flags/main/default/objects/Record_Flag__mdt/validationRules/Apex_Or_Flow.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Or_Flow</fullName>
    <active>true</active>
    <description>Validates that the Record Flag either provides information regarding an Apex or Flow used to calculate the flag.</description>
    <errorConditionFormula>
      OR(
        AND(
          ISBLANK(Apex_Class_Name__c),
          ISBLANK(Flow_Name__c)
        ),
        AND(
          NOT(ISBLANK(Apex_Class_Name__c)),
          NOT(ISBLANK(Flow_Name__c))
        ) 
      )
    </errorConditionFormula>
    <errorMessage>An Apex Class or Flow must be provided, but not both.</errorMessage>
</ValidationRule>